Project/p4/tests/t056.err
Semantic error on line 4: Invalid right operand for operator '!'.
