Project/p4/tests/t056.gpl
string a = "one";

// this is not ok
int b = !a;
